<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/y60"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"></include>


        <LinearLayout
            android:id="@+id/llyt_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y18"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_toolbar">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/color_343445"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x3"
                android:background="@null"
                android:hint="@string/input_mobile"
                android:maxLength="13"
                android:inputType="number"
                android:maxLines="1"
                android:paddingRight="@dimen/x20"
                android:textColor="@color/color_343445"
                android:textColorHint="@color/color_D6D6DF"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/set_password_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/color_343445"
            android:textColorHint="@color/color_D6D6DF"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llyt_account" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/y5"
            android:background="@color/color_EDEDF3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd"></View>

        <LinearLayout
            android:id="@+id/llyt_forget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y80"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fogget"
                android:textColor="@color/color_898A9E"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fogget_pwd"
                android:textColor="@color/theme_color"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/btn_bottom"
            android:layout_width="@dimen/x182"
            android:layout_height="@dimen/y48"
            android:layout_marginTop="@dimen/y32"
            android:background="@drawable/selector_bottom_button"
            android:checked="false"
            android:elevation="@dimen/x4"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llyt_forget" />


    </android.support.constraint.ConstraintLayout>
</layout>
