<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/y60"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"></include>

        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y30"
            android:src="@drawable/upload_avatar_tip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
            app:qmui_border_width="0dp"
            app:qmui_is_circle="true" />

        <EditText
            android:id="@+id/et_nick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginTop="@dimen/y50"
            android:background="@null"
            android:hint="@string/input_nick"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingBottom="@dimen/y14"
            android:paddingTop="@dimen/y14"
            android:textColor="@color/color_343445"
            android:textColorHint="@color/color_D6D6DF"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <View
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/y20"
            android:layout_marginBottom="@dimen/y17"
            android:layout_marginRight="@dimen/x29"
            android:background="@drawable/icon_close_oval_gray"
            app:layout_constraintBottom_toTopOf="@+id/v_line"
            app:layout_constraintRight_toRightOf="parent"></View>

        <View
            android:id="@+id/v_clear"
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/y60"
            app:layout_constraintBottom_toTopOf="@+id/v_line"
            app:layout_constraintRight_toRightOf="parent"></View>


        <View
            android:id="@+id/v_line"
            android:layout_width="0dp"
            android:layout_height="@dimen/y1"
            android:layout_marginLeft="@dimen/x20"
            android:background="@color/color_EDEDF3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nick"></View>


        <TextView
            android:id="@+id/iv_select_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginTop="@dimen/y27"
            android:text="@string/select_sex"
            android:textColor="@color/color_343445"
            android:textSize="@dimen/x18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/v_line" />

        <include
            android:id="@+id/include_sex"
            layout="@layout/layout_sex_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y46"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_sex_noalter"></include>

        <TextView
            android:id="@+id/tv_select_sex_noalter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:text="@string/select_sex_no_alter"
            android:textColor="@color/color_898A9E"
            android:textSize="@dimen/x14"
            app:layout_constraintBottom_toBottomOf="@+id/iv_select_sex"
            app:layout_constraintLeft_toRightOf="@+id/iv_select_sex"
            app:layout_constraintTop_toTopOf="@+id/iv_select_sex" />

        <TextView
            android:id="@+id/btn_bottom"
            layout="@layout/layout_bottom_button_18"
            android:layout_width="0dp"
            android:layout_height="@dimen/y48"
            android:layout_marginBottom="@dimen/y30"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:background="@drawable/selector_bottom_button"
            android:checked="false"
            android:elevation="@dimen/x4"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/x18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>